Fix full component z-index

--- a/src/app/full/full.component.scss
+++ b/src/app/full/full.component.scss
@@ -7,6 +7,7 @@
     width: 100%;
     height: 100vh;
     background-color: map-get($mat-colors, mat-gray-800);
+    z-index: -1;
 }
 
 .fixed-header {
